--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Teste</h1>
+    <div>
+        <h1>Felipe Padovani Caetano</h1>
+        <img src="files/felipe.jpeg" alt="Este sou eu ! Muito prazer" id="minha-foto">
+        <p>Bacharel em Ciência da Computação <strong>UNIFAGOC - Centro Universitário Governador Ozanam Coelho</strong> (2019 - 2023) sou desenvolvedor WEB.</p>
+        <p><strong><em>Resido em: Visconde do Rio Branco. Interior de Minas Gerais. </em></strong></p>
+    </div>
+    <h3>Lista de Hablilidades</h3>
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <LI>Node JS</LI>
+        <li>React Native</li>
+    </ul>
 </body>
 </html>
