--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
 </head>
 <body>
     <div>
-        <h1>Felipe Padovani Caetano</h1>
-        <img src="files/felipe.jpeg" alt="Este sou eu ! Muito prazer" id="minha-foto">
-        <p>Bacharel em Ciência da Computação <strong>UNIFAGOC - Centro Universitário Governador Ozanam Coelho</strong> (2019 - 2023) sou desenvolvedor WEB.</p>
-        <p><strong><em>Resido em: Visconde do Rio Branco. Interior de Minas Gerais. </em></strong></p>
+        <div>
+            <h1>Felipe Padovani Caetano</h1>
+        </div>
+        <div class="img-container">
+            <img src="files/felipe.jpeg" alt="Este sou eu ! Muito prazer" id="minha-foto">
+            <div class="description">
+                <p>Bacharel em Ciência da Computação <strong>UNIFAGOC - Centro Universitário Governador Ozanam Coelho</strong> (2019 - 2023) sou desenvolvedor WEB.</p>
+                <p><strong><em>Resido em: Visconde do Rio Branco. Interior de Minas Gerais. </em></strong></p>
+            </div>
+        </div>
     </div>
     <h3>Lista de Hablilidades</h3>
     <ul>
